--- a/.gitignore
+++ b/.gitignore
@@ -289,4 +289,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# vscode
+.vscode/
 # End of https://www.toptal.com/developers/gitignore/api/python,django,windows
